完成mysql数据库创建

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+		"MySqlConnection": "Server=localhost;Database=ContosoPizza;User Id=guang;password=Guang.a1b2c3;port=3306;sslmode=none;CharSet=utf8mb4"
+	}
 }
