--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+		"MySqlConnection": "Server=localhost;Database=ContosoPizza;User Id=guang;password=Guang.a1b2c3;port=3306;sslmode=none;CharSet=utf8mb4"
+	}
 }
